deployment/kubernetes/kubeflow/kfp-multi-user/manifests/apps/kfserving/upstream/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: inferenceservice.serving.kubeflow.org
webhooks:
  - clientConfig:
      caBundle: Cg==
      service:
        name: $(webhookServiceName)
        namespace: $(kfservingNamespace)
        path: /mutate-serving-kubeflow-org-v1beta1-inferenceservice
    failurePolicy: Fail
    name: inferenceservice.kfserving-webhook-server.v1beta1.defaulter
    sideEffects: None
    admissionReviewVersions: ["v1beta1",  "v1"]
    rules:
      - apiGroups:
          - serving.kubeflow.org
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - inferenceservices
  - clientConfig:
      caBundle: Cg==
      service:
        name: $(webhookServiceName)
        namespace: $(kfservingNamespace)
        path: /mutate-pods
    failurePolicy: Fail
    name: inferenceservice.kfserving-webhook-server.pod-mutator
    sideEffects: None
    admissionReviewVersions: ["v1beta1",  "v1"]
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: DoesNotExist
    objectSelector:
      matchExpressions:
        - key: serving.kubeflow.org/inferenceservice
          operator: Exists
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: inferenceservice.serving.kubeflow.org
webhooks:
  - clientConfig:
      caBundle: Cg==
      service:
        name: $(webhookServiceName)
        namespace: $(kfservingNamespace)
        path: /validate-serving-kubeflow-org-v1beta1-inferenceservice
    failurePolicy: Fail
    name: inferenceservice.kfserving-webhook-server.v1beta1.validator
    sideEffects: None
    admissionReviewVersions: ["v1beta1",  "v1"]
    rules:
      - apiGroups:
          - serving.kubeflow.org
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - inferenceservices
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: trainedmodel.serving.kubeflow.org
webhooks:
  - clientConfig:
      caBundle: Cg==
      service:
        name: $(webhookServiceName)
        namespace: $(kfservingNamespace)
        path: /validate-serving-kubeflow-org-v1alpha1-trainedmodel
    failurePolicy: Fail
    name: trainedmodel.kfserving-webhook-server.validator
    sideEffects: None
    admissionReviewVersions: ["v1beta1",  "v1"]
    rules:
      - apiGroups:
          - serving.kubeflow.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - trainedmodels
